flask_app/static/css/dashboard.css
* {
    margin: 0px;
    padding: 0px;
}

body {
    background-image: url("../images/arrow.jpg");
    background-color: #5CDB95;
}

#nav-title {
    font-family: 'Courier New', Courier, monospace;
    color: #EDF5E1;
    align-self: center;
}

#navbar {
    background-color: #05386B;
    display: flex;
    justify-content: space-evenly;
    height: 60px;
    width: 100%;
}

#nav-links {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 400px;
}

.nav-buttons {
    color: #5CDB95 ;
    height: 20px;
    width: 100px;
    text-align: center;
}

#container {
    width: 1000px;
    margin: 25px auto;
}

#mid-col {
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    width: 700px;
}

.ltg-images {
    width: 200px;
    height: 100px;
    border-radius: 25% 25% 5% 5%;
    border: 2px solid #05386B;
}

.ltg-card {
    background-color: #05386B;
    height: 200px;
    border-radius: 25% 25% 5% 5%;
    color: #EDF5E1;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 10px;
}

